# justaStudyGrid

./: CMakeLists.txt  install.sh  main.c  readme.md  styles.css
